tests/compile-fail/unknown-derive.stderr
error: Deriving `DoesNotExist1` is not supported by derivative
 --> $DIR/unknown-derive.rs:8:14
  |
8 | #[derivative(DoesNotExist1)]
  |              ^^^^^^^^^^^^^

error: Deriving `DoesNotExist2` is not supported by derivative
  --> $DIR/unknown-derive.rs:12:14
   |
12 | #[derivative(DoesNotExist2(with_some="argument"))]
   |              ^^^^^^^^^^^^^

error: Deriving `DoesNotExist3` is not supported by derivative
  --> $DIR/unknown-derive.rs:18:18
   |
18 |     #[derivative(DoesNotExist3)]
   |                  ^^^^^^^^^^^^^
